--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # BlueJ files
 *.ctxt
 
+target/
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -18,6 +20,9 @@
 *.zip
 *.tar.gz
 *.rar
+
+*.iml
+*mvnw*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
